force-app/main/default/objects/Promotion__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <description>Adjustment</description>
    <inlineHelpText>Adjustment</inlineHelpText>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>