force-app/main/default/objects/Promotion__c/fields/Qualifying_Items__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Items__c</fullName>
    <description>Qualifying Items</description>
    <inlineHelpText>Qualifying Items</inlineHelpText>
    <label>Qualifying Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>