force-app/main/default/objects/Promotion__c/fields/Target_Items__c.field-meta.xml
<CustomField>
    <fullName>Target_Items__c</fullName>
    <description>Target Items</description>
    <inlineHelpText>Target Items</inlineHelpText>
    <label>Target Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>